...

object BrowserMainMenuTestTags {
    const val Menu = "browser_main_menu"
    const val Toolbar = "browser_main_menu_toolbar"
    const val Favorite = "browser_main_menu_favorite"
    const val Pin = "browser_main_menu_pin"
    const val PageGroup = "browser_main_menu_page_group"
    const val Translate = "browser_main_menu_translate"
    const val SplitView = "browser_main_menu_split_view"
    const val More = "browser_main_menu_more"
    const val MoreBack = "browser_main_menu_more_back"
    const val MoreGroup = "browser_main_menu_more_group"
    const val CloseTab = "browser_main_menu_close_tab"
    const val Passwords = "browser_main_menu_passwords"
    const val ToppingsGroup = "browser_main_menu_toppings_group"
    const val BrowserGroup = "browser_main_menu_browser_group"
    const val Favorites = "browser_main_menu_favorites"
    const val Downloads = "browser_main_menu_downloads"
    const val History = "browser_main_menu_history"
    const val FirefoxExtensions = "browser_main_menu_firefox_extensions"
    const val Settings = "browser_main_menu_settings"
    const val Snooze = "browser_main_menu_snooze"
    const val SnoozedTabs = "browser_main_menu_snoozed_tabs"
    const val DockAddressBar = "browser_main_menu_dock_address_bar"
    const val DesktopView = "browser_main_menu_desktop_view"
    const val FindInPage = "browser_main_menu_find_in_page"
    const val DuplicateTab = "browser_main_menu_duplicate_tab"

    fun userScriptCommand(commandId: String): String =
        "browser_main_menu_topping_command_$commandId"
}

object DomainMuteMenuTestTags {
...
